# python-project-lvl3

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
.github/workflows/: workflows_make_lint.yml  workflows_test_coverage.yml  workflows_test_page_loader.yml
loader/: .engine.py.swp  __init__.py  data_recipient.py  downloader.py  engine.py  file_reader.py  file_writer.py  logger.py  page_object.py  renamer.py
loader/scripts/: page_loader.py
page_loader/: __init__.py  checker.py  cli.py  data_recipient.py  downloader.py  engine.py  file_reader.py  file_writer.py  filters_links.py  logger.py  name_maker.py  page_object.py  renamer.py
page_loader/scripts/: page_loader.py
ru-hexlet-io-courses_files/: en-hexlet-io-courses  ru-hexlet-io-courses  ru-hexlet-io-courses.html  ru-hexlet-io-lessons.rss
tests/: test_page_load.py
tests/downloading_files/: ru-hexlet-io-courses.html
tests/fixtures/: ru-hexlet-io-courses.html
tests/test_changed_link/: test_changed_link.py
tests/test_download/: test_download.py
tests/test_download_file/: test_download_file.py
tests/test_download_html/: test_download_html.py
tests/test_download_resourses/: test_download_resourses.py
tests/test_get_data/: test_get_data.py
tests/test_get_link_from_tag/: test_get_link_from_tag.py
tests/test_get_sourses/: test_get_sourses.py
tests/test_get_text/: test_get_text.py
tests/test_load_one_page/: test_load_one_page.py
tests/test_make_directory/: test_make_directory.py
tests/test_make_name_dir/: test_make_name_dir.py
tests/test_make_name_file/: test_make_name_file.py
tests/test_make_name_html/: test_make_name_html.py
tests/test_make_name_path/: test_make_name_path.py
tests/test_make_simple_name/: test_make_simple_name.py
tests/test_page_load/: test_page_load.py
tests/test_rename/: test_rename.py
tests/test_rename_to_dir/: test_rename_to_dir.py
(+6 files in other folders)
