[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey <kvazar941@gmail.com>"]
repository = "github.com/kvazar941/python-project-lvl3"
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts] 
page-loader = "page_loader.scripts.page_loader:download"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
