[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey <kvazar941@gmail.com>"]
repository = "github.com/kvazar941/python-project-lvl3"
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2"
progress = "^1"
beautifulsoup4 = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
wemake-python-styleguide = "^0.15.3"
coverage = "^6.3.1"
pytest-cov = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
