[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey <kvazar941@gmail.com>"]
repository = "github.com/kvazar941/python-project-lvl3"
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
progress = "^1.6"
beautifulsoup4 = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
wemake-python-styleguide = "^0.16.0"
flake8 ="^4.0.1"
flake8-bandit = "2.1.2"
bandit = "1.7.2"
coverage = "^6.4.1"
requests-mock = "^1.8.0"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
